tests/machine/x/erlang/string_compare.error
exit status 127
tests/machine/x/erlang_new/string_compare.erl:6:29: syntax error before: '<='
escript: There were compilation errors.
